--- a/client/style.css
+++ b/client/style.css
@@ -86,6 +86,25 @@ body {
   object-fit: contain;
 }
 
+.header {
+  width: 100%;
+  padding: 20px 15px;
+  text-align: center;
+  background-color: #25262f;
+  color: #dcdcdc;
+}
+
+.header h1 {
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+
+.header p {
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .message {
   flex: 1;
 
@@ -148,3 +167,4 @@ form img {
   width: 30px;
   height: 30px;
 }
+
